--- a/public/courses/stat220/week4/index.html
+++ b/public/courses/stat220/week4/index.html
@@ -829,6 +829,13 @@ Before Class  Please read GW Chapter 12 on tidy data and reshaping data. Start w
 <ul>
 <li>Link to <a href="https://github.com/stat220/07-tidy-data" target="_blank" rel="noopener">In Class Activity</a></li>
 </ul>
+<p><span style="color:orange"><strong>Wednesday, 01/26</strong></span></p>
+<h3 id="before-class-1">Before Class</h3>
+<div class="alert alert-note">
+  <div>
+    Please read <a href="https://r4ds.had.co.nz/data-import.html">GW Chapter 11</a> and skim through <a href="https://rafalab.github.io/dsbook/importing-data.html">IDS Chapter 5</a> on importing data. If you need more indepth description of dates/times in lubridate, read <a href="https://r4ds.had.co.nz/dates-and-times.html">GW Chapter 16</a>
+  </div>
+</div>
 
           </div>
 
