--- a/public/courses/stat220/week2/index.html
+++ b/public/courses/stat220/week2/index.html
@@ -704,6 +704,10 @@ Before Class  Please read GW Chapter 3, GW Chapter 28 and Jenny Bryan&rsquo;s Ch
       
 
 
+  <li class=""><a href="/courses/stat220/week5/">Week 5</a></li>
+
+
+
   <li class=""><a href="/courses/stat220/week4/">Week 4</a></li>
 
 
