--- a/static/pdf/Day10/Day10.html
+++ b/static/pdf/Day10/Day10.html
@@ -22,7 +22,7 @@ class: left, middle, inverse, title-slide
 # More date and time and strings
 ## <br/> STAT 220
 ### Bastola
-### January 28 2022
+### January 30 2022
 
 ---
 
@@ -149,15 +149,15 @@ make_datetime(year = 2022,
 first_day &lt;- ymd_hm("2022-01-05 12:30")
 classtime &lt;- now() - first_day
 classtime
-Time difference of 23.23401 days
+Time difference of 25.22039 days
 ```
 
 
 ```r
 as.period(classtime)
-[1] "23d 5H 36M 58.3880472185556S"
+[1] "25d 5H 17M 21.3643372058868S"
 as.duration(classtime)
-[1] "2007418.38804722s (~3.32 weeks)"
+[1] "2179041.36433721s (~3.6 weeks)"
 ```
 ]
 --
@@ -167,14 +167,14 @@ as.duration(classtime)
 ```r
 diff1 &lt;- first_day %--% now()
 diff1/dminutes(1)
-[1] 33456.97
+[1] 36317.36
 ```
 
 
 ```r
 diff2 &lt;- interval(first_day, now())
 diff2/dminutes(1)
-[1] 33456.97
+[1] 36317.36
 ```
 
 ]
@@ -371,7 +371,7 @@ flights %&gt;%
 
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -386,7 +386,7 @@ count: false
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -402,7 +402,7 @@ top_dest &lt;- flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -419,7 +419,7 @@ top_dest &lt;- flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -456,7 +456,7 @@ top_dest &lt;- flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -494,7 +494,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -538,7 +538,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -580,7 +580,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -624,7 +624,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -669,7 +669,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -719,7 +719,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -771,7 +771,7 @@ flights %&gt;%
 ---
 count: false
  
-## Duration using lubriate
+## Duration using lubridate
 .panel1-demo2-auto[
 
 ```r
@@ -1268,7 +1268,7 @@ cell_info
 
 - Complete the required tasks using `str_subset`, `str_extract`, `str_split` and `str_replace`.
 
-<div class="countdown" id="timer_61f434ad" style="right:0;bottom:0;" data-warnwhen="0">
+<div class="countdown" id="timer_61f6cf34" style="right:0;bottom:0;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">07</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">30</span></code>
 </div>
 
