--- a/public/stat120/lecture_notes/Day5.html
+++ b/public/stat120/lecture_notes/Day5.html
@@ -195,7 +195,7 @@ Feel free to talk to your neighbor
 ]
 ]
 
-<div class="countdown" id="timer_624e1632" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624e1ea2" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
@@ -774,7 +774,7 @@ Go over the remaining portion of in class activity and let me know if you have a
 ]
 ]
 
-<div class="countdown" id="timer_624e161b" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624e1bc7" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
