--- a/public/stat230/lecture_notes/Day5.html
+++ b/public/stat230/lecture_notes/Day5.html
@@ -1163,7 +1163,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_624e174d" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_624e1b40" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
