--- a/public/courses/stat120/week3/index.html
+++ b/public/courses/stat120/week3/index.html
@@ -709,6 +709,18 @@ Day 9 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.ne
       
 
 
+  <li class=""><a href="/courses/stat120/week7/">Week 7</a></li>
+
+
+
+  <li class=""><a href="/courses/stat120/week6/">Week 6</a></li>
+
+
+
+  <li class=""><a href="/courses/stat120/week5/">Week 5</a></li>
+
+
+
   <li class=""><a href="/courses/stat120/week4/">Week 4</a></li>
 
 
