--- a/public/courses/stat230/index.html
+++ b/public/courses/stat230/index.html
@@ -700,6 +700,10 @@
       
 
 
+  <li class=""><a href="/courses/stat230/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat230/week6/">Week 6</a></li>
 
 
