--- a/public/courses/stat230/week5/index.html
+++ b/public/courses/stat230/week5/index.html
@@ -709,6 +709,10 @@ Day 15 Slides (pdf/html)" /><meta property="og:image" content="https://deepbas.n
       
 
 
+  <li class=""><a href="/courses/stat230/week7/">Week 7</a></li>
+
+
+
   <li class=""><a href="/courses/stat230/week6/">Week 6</a></li>
 
 
