--- a/public/stat120/lecture_notes/Day18.html
+++ b/public/stat120/lecture_notes/Day18.html
@@ -684,7 +684,7 @@ class: action
 ]
 ]
 
-<div class="countdown" id="timer_6278c74f" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
+<div class="countdown" id="timer_6278bb9b" style="top:0;right:0;padding:3px 4px;font-size:2em;" data-warnwhen="0">
 <code class="countdown-time"><span class="countdown-digits minutes">05</span><span class="countdown-digits colon">:</span><span class="countdown-digits seconds">00</span></code>
 </div>
 
